@@ -1,3 +1,8 @@
+1999-03-29  Harri Porten  <porten@kde.org>
+
+	* keditcl1.cpp: i18n'ed "Untitled" (Save As ... bug)
+	* keditcl2.cpp: gave QMessageBox'es more appropriate parents
+
 1999-03-04  Harri Porten  <porten@kde.org>
 
 	* kquickhelp.*: changed 'tips' to be a pointer instead of an object.
